Fixed z-index order

--- a/css/simple-slide.css
+++ b/css/simple-slide.css
@@ -10,4 +10,5 @@
   position: relative;
   opacity: 1;
   transition: opacity 500ms;
+  z-index: 1;
 }
